--- a/.github/ workflow/pythonpackage.yml
+++ b/.github/ workflow/pythonpackage.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name : Instal dependencies {
+        freeImplementation 'com.google.firebase: firebase-ads: 9.8.0'
+    }
+    
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
